@@ -69,6 +69,7 @@ except ImportError as e:
 import unittest
 import CommandLineArgument_test
 import HidraImageSource_test
+import HttpImageSource_test
 
 if not PNI_AVAILABLE and not H5PY_AVAILABLE:
     raise Exception("Please install h5py or pni")
@@ -81,13 +82,11 @@ if not PNI_AVAILABLE and not H5PY_AVAILABLE:
 # list of available databases
 DB_AVAILABLE = []
 
-
 if PYTANGO_AVAILABLE:
     import LavueController_test
     import CommandLineLavueState_test
     import TangoAttrImageSource_test
     import ZMQStreamImageSource_test
-
 
 if PNI_AVAILABLE:
     import FileWriter_test
@@ -119,6 +118,7 @@ def main():
     app = QtGui.QApplication([])
     CommandLineArgument_test.app = app
     HidraImageSource_test.app = app
+    HttpImageSource_test.app = app
     if PYTANGO_AVAILABLE:
         CommandLineLavueState_test.app = app
         TangoAttrImageSource_test.app = app
@@ -132,6 +132,9 @@ def main():
     suite.addTests(
         unittest.defaultTestLoader.loadTestsFromModule(
             HidraImageSource_test))
+    suite.addTests(
+        unittest.defaultTestLoader.loadTestsFromModule(
+            HttpImageSource_test))
     if PNI_AVAILABLE:
         suite.addTests(
             unittest.defaultTestLoader.loadTestsFromModule(FileWriter_test))
