@@ -1,7 +1,9 @@
 2020-07-28 Jan Kotanski <jan.kotanski@desy.de>
 	* add tests for Tango File image source
 	* add tests for Hidra image source
+	* add tests for Http image source
 	* improve warning message for a missing file name in TangoFileSource
+	* add "File not found" as a no-image message in the HTTP source
 	* tagged as 2.43.9
 
 2020-07-24 Jan Kotanski <jan.kotanski@desy.de>
